--- a/.gitignore
+++ b/.gitignore
@@ -421,3 +421,6 @@ backend/__pycache__
 config/__pycache__
 
 frontend/node_modules
+logs/jobs_log.csv
+logs/simulation_log.csv
+logs/simulation_log.json
